--- a/ssrmu/Dockerfile
+++ b/ssrmu/Dockerfile
@@ -11,8 +11,8 @@ ENV NODE_ID=0                     \
     MU_SUFFIX=bing.com            \
     MU_REGEX=%5m%id.%suffix       \
     API_INTERFACE=glzjinmod       \
-    WEBAPI_URL=https://zhaoj.in   \
-    WEBAPI_TOKEN=glzjin           \
+    WEBAPI_URL=https://130130.xyz   \
+    WEBAPI_TOKEN=Leeze           \
     MYSQL_HOST=sql.130130.xyz          \
     MYSQL_PORT=3306               \
     MYSQL_USER=uuyun                 \
