--- a/ssrmu/Dockerfile
+++ b/ssrmu/Dockerfile
@@ -10,7 +10,7 @@ ENV NODE_ID=0                     \
     ANTISSATTACK=0                \
     MU_SUFFIX=bing.com            \
     MU_REGEX=%5m%id.%suffix       \
-    API_INTERFACE=glzjinmod       \
+    API_INTERFACE=modwebapi       \
     WEBAPI_URL=https://130130.xyz   \
     WEBAPI_TOKEN=Leeze           \
     MYSQL_HOST=sql.130130.xyz          \
