--- a/ssrmu/Dockerfile
+++ b/ssrmu/Dockerfile
@@ -11,7 +11,7 @@ ENV NODE_ID=0                     \
     MU_SUFFIX=bing.com            \
     MU_REGEX=%5m%id.%suffix       \
     API_INTERFACE=modwebapi       \
-    WEBAPI_URL=https://130130.xyz   \
+    WEBAPI_URL=https://api.130130.xyz   \
     WEBAPI_TOKEN=Leeze           \
     MYSQL_HOST=sql.130130.xyz          \
     MYSQL_PORT=3306               \
